// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Github > GITHUB_GET_REPOS > should handle FAILURE 1`] = `
{
  "topics": {
    "react": {
      "cached": false,
      "data": [],
      "message": {
        "message": "Something failed",
      },
      "status": "error",
      "updatedAt": 0,
    },
  },
}
`;

exports[`Github > GITHUB_GET_REPOS > should handle REQUEST 1`] = `
{
  "topics": {
    "react": {
      "cached": false,
      "data": [],
      "message": "",
      "status": "running",
      "updatedAt": 0,
    },
  },
}
`;

exports[`Github > GITHUB_GET_REPOS > should handle SUCCESS 1`] = `
{
  "topics": {
    "react": {
      "cached": false,
      "data": {
        "data": [
          {
            "name": "one",
          },
        ],
      },
      "message": "",
      "status": "success",
      "updatedAt": 1234567890,
    },
  },
}
`;

exports[`Github > should return the initial state 1`] = `
{
  "topics": {},
}
`;
